[package]
name = "class_number"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
itertools = "0.9.0"
num = "0.2.1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.1"
